# libdrizzle-redux

./: .bootstrap  .bzrignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  README.rst  RELEASE_NOTES.md  bootstrap.sh  config.h.in  configure.ac  docker-compose.yml  travis_configure.sh
cli/: CMakeLists.txt  drizzle_binlogs.c  drizzle_binlogs_check.sh  include.am  libdrizzle_config.c
cmake/modules/: IncludeTest.cmake
deb/: after_install.sh  build  include.am
docker/: Dockerfile  Dockerfile.centos.7  Dockerfile.centos.8  Dockerfile.ubuntu.bionic  Dockerfile.ubuntu.focal  Dockerfile.ubuntu.xenial  container_entrypoint.sh  docker-compose.centos.7.yml  docker-compose.centos.8.yml  docker-compose.ubuntu.bionic.yml  docker-compose.ubuntu.xenial.yml  entrypoint.centos.sh  entrypoint.ubuntu.sh  libdrizzle-redux.env  mysql.env  mysqld_binlog.cnf  ubuntu_xenial_image_run.sh
docs/: CMakeLists.txt  binlog.rst  compiling.rst  conf.py.in  connection.rst  constants.rst  examples.rst  include.am  index.rst  introduction.rst  latex_check_packages.sh  library.rst  license.rst  query.rst  structs.rst
docs/_build/: conf.py.in
docs/_templates/: layout.html
docs/api/: binlog.rst  connection.rst  constants.rst  index.rst  library.rst  query.rst  statement.rst  structs.rst
docs/cli/: drizzle_binlog.rst  index.rst
docs/examples/: binlog.rst  buffered.rst  event_callback.rst  index.rst  statement.rst  unbuffered.rst
docs/man/: bugs.rst  overview.rst  see-also.rst
include/libdrizzle-redux/: binlog.h  column.h  column_client.h  conn.h  conn_client.h  constants.h  drizzle.h  drizzle_client.h  field_client.h  include.am  libdrizzle.h  query.h  result.h  result_client.h  return.h  row_client.h  ssl.h  statement.h  verbose.h  visibility.h
libdrizzle/: binlog.c  binlog.cc  binlog.h  column.c  column.cc  column.h  column_client.h  command.c  command.cc  common.h  conn.c  conn.cc  conn.h  conn_client.h  conn_local.h  conn_uds.c  conn_uds.cc  constants.h  datetime.h  drizzle.c  drizzle.cc  drizzle.h  drizzle_client.h  drizzle_local.h  drizzle_server.h  error.cc  field.c  field.cc  handshake.c  handshake.cc  handshake_client.h  include.am  pack.c  pack.cc  pack.h  packet.h  poll.cc  poll.h  query.c  query.cc  (+19 more)
libdrizzle-5.0/: binlog.h  column.h  conn.h  conn_client.h  constants.h  drizzle.h  drizzle_client.h  include.am  libdrizzle.h  pack.h  result_client.h  return.h  statement.h  structs.h  version.h.in
libdrizzle-5.1/: binlog.h  column.h  column_client.h  conn.h  conn_client.h  constants.h  drizzle.h  drizzle_client.h  error.h  field_client.h  handshake_client.h  include.am  libdrizzle.h  pack.h  query.h  result.h  result_client.h  return.h  row_client.h  ssl.h  statement.h  structs.h  verbose.h  version.h.in  visibility.h
m4/: acltx_prog_kpsewhich.m4  acltx_prog_latex.m4  acltx_prog_pdflatex.m4  ax_check_setsockopt.m4  ax_code_coverage.m4  ax_enable_ssl.m4  ax_harden_compiler_flags.m4  ax_platform.m4  ax_prog_sphinx_build.m4  ax_pthread.m4  bottom.m4  include.am  zlib.m4
man/: include.am
pkg/: include.am
pkg/deb/: build  include.am
pkg/rpm/: include.am  spec.in
relnotes/: bootstrap.feature.removed.md  codecov.feature.md  const-qualifier.feature.md  query.api.feature.md  ssl.feature.md  wiki.removed.md
rpm/: build  include.am  spec.in
src/: binlog.cc  binlog.h  column.cc  column.h  command.cc  common.h  conn.cc  conn_uds.cc  datetime.h  drizzle.cc  drizzle_local.h  error.cc  field.cc  handshake.cc  handshake_client.h  include.am  pack.cc  pack.h  packet.h  poll.cc  poll.h  query.cc  result.cc  result.h  row.cc  sha1.cc  sha1.h  ssl.cc  state.cc  state.h  statement.cc  statement_local.h  statement_param.cc  structs.h
test/: client.c
test/unit/: CMakeLists.txt  binlog.c  connect.c  escape.c  hex.c  insert_id.c  passwd.c  query.c  unbuffered_query.c  version.c
tests/: api-sanity-checker-version.xml.in  include.am
tests/unit/: CMakeLists.txt  binlog.c  binlog.cc  binlog_async.c  cleanup.h  column.c  column_unbuffered.c  common.c  common.h  connect.c  connect_async.c  connect_uds.c  datatypes_all.c  datetypes.c  drizzle_options.c  escape.c  event_callback.c  hex.c  include.am  insert_id.c  main_c.c  main_cxx.cc  mysql_properties.c  nulls.c  numbers.c  passwd.c  query.c  return_code.c  row.c  row_api.c  ssl.c  statement.c  statement_char.c  statement_nulls.c  unbuffered_query.c  version.c  version_cxx.cc
yatl/: include.am  lite.h
